--- a/src/app/sitting-places-generator/sitting-places-generator.css
+++ b/src/app/sitting-places-generator/sitting-places-generator.css
@@ -12,21 +12,52 @@
 
 #container-visualiser {
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 80%;
-}
-
-#generator-table {
-  position: relative;
-  width: 40%;
+  width: 70%;
   height: 100%;
   padding:1%;
 }
 
-#roomvisualiser {
+#generator-table {
+  position: relative;
+  width: 30%;
+  height: 100%;
   padding:1%;
+}
+
+#roomvisualiserHeader {
+  position: relative;
+  margin-left: 17.5%;
+  padding: 1% 0% 2% 0%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#roomname {
+  position: relative;
+  text-decoration: underline;
+  font-size: 1rem;
+  height: 100%;
+  border: 1px solid #e2e2e2;
+  color: #999;
+  text-decoration: none;
+  padding-left: 1%;
+}
+
+.link {
+  position: relative;
+  text-decoration: underline;
+  cursor: pointer;
+
+  font-size: 1rem;
+  text-align: right;
+  height: 100%;
+  padding-right: 2%;
+  color: #777;
+}
+
+#roomvisualiser {
+margin-left: 17.5%;
 }
 
 #footer {
