SM-28/SM-214Button und Funktionalität für das neue Generieren der Sitzordnung auf Knopfdruck

--- a/src/app/sitting-places-generator/sitting-places-generator.html
+++ b/src/app/sitting-places-generator/sitting-places-generator.html
@@ -12,6 +12,7 @@
       <a (click)="savePng()" class="link">PNG herunterladen</a>
 
       <a (click)="savePdf()" class="link">PDF herunterladen</a>
+      <a (click)="newGenerator()" class="link">Neu generieren</a>
     </div>
     <div id="roomvisualiser">
 
