--- a/src/app/import-room-csv/import-room-csv.component.html
+++ b/src/app/import-room-csv/import-room-csv.component.html
@@ -8,7 +8,8 @@
         <span aria-hidden="true">&times;</span> </button>
     </div><div class="modal-body">
       <span class="material-icons md-48">file_open</span>
-      <input type="file" #csvReader name="Upload CSV" id="txtFileUpload"  accept=".csv"  class="form-control form-control-lg btn-file" style="width: 80%; left:22px"/>
+      <input type="file" #csvReader name="Upload CSV" id="txtFileUpload"  accept=".csv" (change)="uploadListener($event)"  class="form-control form-control-lg btn-file" style="width: 80%; left:22px"/>
+      <small id="FileTypHelp" class="form-text text-danger" style="margin-left: 70px">{{messageIfNoFile}}</small> <br>
     </div><div class="modal-footer">
       <button type="button" (click)="closeModal()" class="btn btn-secondary" data-dismiss="modal">Schlißen</button>
       <!--<button type="button" class="btn btn-primary">Bestätigen und Importieren</button>-->
